--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
 <h1>Testing out these pages</h1>
-  <a href=usa.html>Covid-19 Data in the US</a>
+  <a href=covid19usa.html>Covid-19 Data in the US</a>
 </html>
