--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
-<h1>Testing out these pages</h1>
-  <a href=covid19usa.html>Covid-19 Data in the US</a>
+<h1>My Covid 19 Pages</h1>
+  <a href=covid19usa.html>Covid-19 Click Map for the Contintenal US (sorry Hawaii and Alaska)</a>
+  <a href=covid19state.html>Covid-19 State and County detailed statistics looking</a>
 </html>
