--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
-<h1>My Covid 19 Pages</h1>
+<h1>Covid 19 Pages</h1>
   <ul>
   <li><a href=covid19usa.html>Covid-19 Click Map for the Contintenal US (sorry Hawaii and Alaska)</a>
-  <li><a href=covid19state.html>Covid-19 State and County detailed statistics looking</a>
+  <li><a href=covid19state.html>Covid-19 USA State and County detailed statistics</a>
+  <li><a href=covid19int.html>Covid-19 International statistics (only has countries that do not report regional data)</a>
   </ul>
 </html>
