--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <h1>Covid 19 Pages</h1>
   <ul>
-  <li><a href=covid19usa.html>Covid-19 Click Map for the Contintenal US (sorry Hawaii and Alaska)</a>
+  <li><a href=covid19usa.html>Covid-19 Click Map for the Contintenal US (sorry Hawaii and Alaska)</a> <b>&lt;- New! Classes of maps and a timelapse player</b>
   <li><a href=covid19state.html>Covid-19 USA State and County detailed statistics</a>
   <li><a href=covid19int.html>Covid-19 International statistics (only has countries that do not report regional data)</a>
-  <li><a href=covid19reg.html>Covid-19 International statistics (for countries reporting regional or provincial data)</a> <(<i>new!</i>)
+  <li><a href=covid19reg.html>Covid-19 International statistics (for countries reporting regional or provincial data)</a>
   </ul>
 </html>
